tests/rosetta/out/Smalltalk/array-length.out
/workspace/mochi/tests/rosetta/out/Smalltalk/array-length.st:4: parse error, expected '|' or identifier
