tests/rosetta/out/Smalltalk/array-length.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| main arr |
main := [ arr := {'apple'. 'orange'. 'pear'}.
Transcript show: ((((((((('Length of ') + ((arr asString)))) + (' is '))) + ((3 asString)))) + '.')) printString; cr. ].
main value.
